# backend/src/models/review/dtos/GetReviewResponse.ts
@@ -3,5 +3,9 @@ export interface GetReviewResponse {
   rating: number;
   comment: string;
   idCareProfessional: number;
-  idPatient: number;
+  patient: {
+    id: number;
+    name: string;
+    urlImage?: string | null
+  }
 }
